--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "Tim Malone <tdmalone@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "execute": "docker run --rm -e AWS_ACCESS_KEY_ID -e AWS_SECRET_ACCESS_KEY -e AWS_DEFAULT_REGION -e AWS_SECURITY_GROUP_ID -e AWS_SECURITY_GROUP_PORTS -v $PWD:/var/task lambci/lambda:nodejs6.10 index.handler {}",
+    "execute": "docker run --rm -e CI -e LOCAL_TIMEZONE -e AWS_ACCESS_KEY_ID -e AWS_SECRET_ACCESS_KEY -e AWS_DEFAULT_REGION -e AWS_SECURITY_GROUP_ID -e AWS_SECURITY_GROUP_PORTS -v $PWD:/var/task lambci/lambda:nodejs6.10 index.handler \"$(cat tests/fixtures/api-gateway-request.json)\"",
     "lint": "DEBUG=eslint:cli-engine eslint --color --ignore-pattern '/coverage/' --ignore-pattern '/docs/' --ignore-pattern '!.eslintrc.js' \"**/*.js\"",
     "fix": "yarn lint --fix",
     "test": "yarn execute && jest --verbose --coverage"
@@ -20,7 +20,8 @@
   },
   "dependencies": {
     "@tdmalone/lambda-proxy-response": "^0.0.2",
-    "aws-sdk": "^2.170.0"
+    "aws-sdk": "^2.170.0",
+    "moment-timezone": "^0.5.14"
   },
   "devDependencies": {
     "eslint": "^4.8.0",
