Don't remove tests in Travis; we need it + minor README docs

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ script:
 
 before_deploy:
   - yarn remove aws-sdk
-  - rm -rf coverage node_modules tests .*rc.js
+  - rm -rf coverage node_modules .*rc.js
   - yarn --prod
 
 deploy:
